# Master

./: .gitignore  README.md
APIA/PyCatan/: test.ipynb  test_aws.ipynb
APIA/PyCatan/Agents/: AlexPelochoJaimeAgent.py  CrabisaAgent.py  PabloAleixAlexAgent.py  SigmaAgent.py
APIA/PyCatan/Genetyc/: fenotype.py  run.py
APIA/PyCatan/outputs/: mejores.csv  results_0.csv  results_1.csv  results_2.csv  results_3.csv  results_4.csv
GPC/: README.md  Readme.md
GPC/clase1/: camara-2.html  camara.html  ej-1.html  ej-2.html  ej-2triangles.html  ej-3.html  estrellas-0.html  quad-1.html
GPC/webgl/: ej-esferas.html  ej-loader-fbx.html  ejercicioescalera.html  practica2.html  practica4.html  proyecto.html  s2-geom-index.html  s2-geom.html  s2-grafo.html  s3-cam1.html  s3-cam2.html  s3-colisiones.html  s3-trans-basica.html  s3-trans1.html  s4-angry-birds.html  s4-cannon-basico.html  s4-ej-1.html  s4-fisica-1.html  s4-gui.html  test.html
GPC/webgl/js/: base-sample.js  ej-loader-FBX-1.js  ejercicioescalera.js  esferas.js  practica2.js  practica4.js  proyecto.js  proyecto_dessechado.js  s2-geom-index.js  s2-grafo.js  s3-trans-basica.js  s3-trans1.js  s4-angry-birds.js  s4-cannon-basico.js  s4-ej-1.js  s4-fisica-1.js  s4-gui.js  tesst.js
GPC/webgl/models/antorcha_medieval/: license.txt  scene.gltf
GPC/webgl/models/coast_line_01_4k.gltf/: coast_line_01_4k.gltf
GPC/webgl/models/cofre/: scene.gltf
LC/: README.MD  README.md  pyproject.toml
LC/EJ1/: lab0.ipynb  lab1.ipynb  salida_tokenizador_2024.txt
LC/Ej2/: ejercicio2.ipynb
LC/Ej3/: ej3_ayuda.ipynb  ejercicio3.ipynb
LC/Ej4/: lab4.ipynb
LC/Proyecto/: Proyecto Linguistica.pptx  Resultados.xlsx  source.ipynb
LC/Proyecto/ficheros/: resultado.txt
RFA/: 1RFABasicArch.ipynb  2RFAHyperparameters.ipynb  3RFAReduceLR.ipynb  4RFACNN.ipynb  5RFA_TL_FT_DA.ipynb  README.MD  README.md  RFA presentacion.pptx  pyproject.toml
RNA/: README.md  pyproject.toml  test.ipynb
RNA/cifar_tests/: base.ipynb  convnet.ipynb  lr_da.ipynb  lr_da2.ipynb  lr_da_dropout.ipynb  luis.ipynb  main.py  net copy 2.ipynb  net copy 3.ipynb  net copy 4.ipynb  net copy 5.ipynb  net copy 6.ipynb  net copy.ipynb  net.ipynb  resnet_2.ipynb  resnet_block.ipynb  resnet_block_da.ipynb  resnet_block_da3.ipynb  resnet_block_da_adamw.ipynb  resnet_dropout copy 2.ipynb  resnet_dropout copy 3.ipynb  resnet_dropout copy 4.ipynb  resnet_dropout copy 5.ipynb  resnet_dropout copy.ipynb  resnet_dropout.ipynb
RNA/mnist_tests/: README.md  adam.ipynb  base.ipynb  batch_norm.ipynb  da.ipynb  da2.ipynb  da_aug.ipynb  da_aug2.ipynb  da_elastic.ipynb  da_elastic2.ipynb  lr.ipynb  lr_plateau.ipynb  main.py  mlp.ipynb
SMU/gossip/: config.yaml  grafica.ipynb  grafica_LS_DR.ipynb  push_max_k_1.ipynb  push_pull.ipynb  pyproject.toml  result_pull.txt  result_push.txt  result_push_pull.txt  server.db
SMU/mesa/: pyproject.toml
TA/SpeechTranslation/: 1.ASRBaseline.ipynb  CascadeSTBaseline.ipynb  L4_4_ST_Cascade_Whisper_Marian_Finetuning_adalora.ipynb  L4_4_ST_Cascade_Whisper_Marian_Finetuning_curated.ipynb  L4_4_ST_Cascade_Whisper_NLLB_Finetuning.ipynb  README.md  STBaseline.ipynb  pyproject.toml
TA/TraduccionJapEn/: L3.5_NMT_LLAMA_Finetuning_1ShotP.ipynb  L3.5_NMT_LLAMA_Finetuning_1ShotPAdaloraBertscore.ipynb  L3.5_NMT_LLAMA_Prompting.ipynb  L3_4_NMT_NLLB_Baseline.ipynb  L3_4_NMT_NLLB_Finetuning.ipynb  L3_5_NMT_LLAMA_Finetuning.ipynb  L3_5_NMT_LLAMA_Prompting2.ipynb  README.md  opus_mt_baseline.ipynb  opus_mt_finetuning.ipynb  pyproject.toml
TLH/Chatbot/: README.md  config.yml  config.yml:Zone.Identifier  domain.yml  endpoints.yml  graph.html  pracBot.docx  pyproject.toml
TLH/Chatbot/actions/: actions.py
TLH/Chatbot/data/: nlu.yml  rules.yml
TLH/ChatbotTelegram/: README.md  credentials.yml  domain.yml  endpoints.yml  pyproject.toml  test.ipynb
TLH/ChatbotTelegram/actions/: actions.py  helper.py
TLH/ChatbotTelegram/data/: nlu.yml  rules.yml  stories.yml
TLH/RAHWhisper/: 1tokenizer.ipynb  24dates.ipynb  2dataset.ipynb  3network.ipynb  4tags.ipynb  dataset.py  dataset_text.py  pyproject.toml  tokenizer_13.pth  tokenizer_14.pth  train.py  train_text.py  utils.py
TLH/RAHWhisper/fechas1/: fechas1_tag_test.csv  fechas1_tag_train.csv  fechas1_test.csv  fechas1_test_sintetic.csv  fechas1_train.csv  fechas1_train_sintetic.csv
TMH/: DiegoIgualarSecuenciasNumeros.pptm  README.MD  README.md  pyproject.toml  resultsAG.txt  resultsES.txt  test.ipynb
TMH/EnfriamientoSimulado/: algorithm.py  neighbors.py  temperature.py
TMH/GeneticAlgorithm/: algorithm.py  child_generation.py  individuo.py  replace.py  selection.py
VC/: pyproject.toml
VC/gender/: main.py  test_small.ipynb  tests copy 2.ipynb  tests copy.ipynb  tests_big.ipynb
