[tool.poetry]
name = "rfa"
version = "0.1.0"
description = ""
authors = ["Diego Ros"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8,<3.11"
notebook = "^7.2.2"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = "2.12.0"
keras = "^3.5.0"



[tool.poetry.group.dev.dependencies]
black = "^22.4.0"
ruff = "^0.0.217"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]
