[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Diego Ros"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.21"
rasa = {extras = ["all"], version = "^3.0"}




[tool.poetry.group.dev.dependencies]
# black = {extras = ["jupyter"], version = "^24.8.0"}
# ruff = "^0.0.217"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]
